--- a/frontend-wijmo/src/style.css
+++ b/frontend-wijmo/src/style.css
@@ -13,9 +13,7 @@
 }
 
 .gs-query-search-btn {
-    color:white;
-    background-color:#9A7BCF;
-    border-radius:0;
+    border-radius:5px;
     max-width:100px;
     position: absolute;
     right:10px;
@@ -48,7 +46,6 @@
     font-size:14px;
     font-weight:500;
     width:120px;
-    text-align:right;
     line-height:26px;
     color:black;
     margin-right:5px;
